--- a/src/style.scss
+++ b/src/style.scss
@@ -61,23 +61,30 @@ body, html{
     }
 }
 .navbar{
-    a::after{
-        content: '';
-        transition: 0.5s ease-out;
-        position: absolute;
-        display: block;
-        height: 1px;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        background: white;
-        transform: scaleX(0);
-        transform-origin: left;
+    a{
+        &::after{
+            content: '';
+            transition: 0.5s ease-out;
+            position: absolute;
+            display: block;
+            height: 1px;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background: white;
+            transform: scaleX(0);
+            transform-origin: left;
+        }  
+        &:hover::after{
+            transform: scaleX(1);
+        }
+        &.active{
+            &::after{
+                transform: scaleX(1);
+            }
+        }
     }
-    a:hover::after{
-        transform: scaleX(1);
-        
-    }
+
     li{
         &:nth-child(2) , &:nth-child(3){
             a::after{
@@ -86,6 +93,7 @@ body, html{
         }
     }
 }
+
 .hero-text{
     position: absolute;
     width: 100%;
