--- a/src/style.scss
+++ b/src/style.scss
@@ -78,12 +78,12 @@ body, html{
             transition: 0.5s ease-out;
             position: absolute;
             display: block;
-            height: 1px;
             bottom: 0;
             left: 0;
             right: 0;
             background: white;
             transform: scaleX(0);
+            border: solid white 1px;
             transform-origin: left;
         }  
         &:hover::after{
@@ -212,16 +212,18 @@ p{
         transition: transform 0.5s ease-out;
         position: absolute;
         display: block;
-        height: 1px;
         bottom: 0;
         left: 0;
         right: 0;
         background: white;
         transform: scaleX(0);
+        // Seems to be a fix for chrome browsers
+        border: 1px solid white;
         transform-origin: left;
     }  
     &.extend{
         &::after{
+            
             transform: scaleX(1);
         }
     }
