--- a/src/style.scss
+++ b/src/style.scss
@@ -44,6 +44,8 @@ body, html{
     background-color: #000;
 }
 .hero-text{
+    display: flex;
+    flex-direction: column;
     overflow-y: auto;
 }
 .navbar{
@@ -311,4 +313,74 @@ p{
     :nth-child(2), :nth-child(n+4){
         padding-top: 20px;
     }
+}
+.reservation-mode{
+    background: #000;
+}
+.reservations{
+    display: grid;
+    grid-template-areas: 
+    "text text text"
+    "t1 entrance t3"
+    "t2 entrance t3"
+    "t4 t5 t5";
+    
+    margin-top: 10px;
+    grid-template-rows: max-content repeat(3, 1fr);
+    grid-template-columns: 15% 20% 15%;
+    column-gap: 1.5rem;
+    row-gap: 0.5rem;
+    justify-content: center;
+    width: 80%;
+    height: 80%;
+    align-self: center;
+    justify-self: center;
+}
+.reservations{
+    >:nth-child(n+3){
+        border: solid #fff 1px;
+        &:hover{
+            cursor: pointer;
+            background-color: #fff;
+        }
+    }
+}
+.table[tableId="1"]{
+    grid-area: t1;
+}
+.table[tableId="2"]{
+    grid-area: t2;
+}
+.table[tableId="3"]{
+    grid-area: t3;
+}
+.table[tableId="4"]{
+    grid-area: t4;
+}
+.reservations .entrance{
+    grid-area: entrance;
+    border-left: solid white 1px;
+    border-right: solid white 1px;
+    border-top: none;
+    border-bottom: none;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+}
+.table[tableId="5"]{
+    grid-area: t5;
+}
+.table[tableId="6"]{
+    grid-area: t6;
+}
+.text{
+    grid-area: text;
+    margin-bottom: 2rem;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
 }
