--- a/src/style.scss
+++ b/src/style.scss
@@ -131,8 +131,11 @@ body, html{
     }
 }
 .footer{
-    position: relative;
-    top: 55%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding-bottom: 36px;
     font-family: "Lora";
     color: white;
     padding-left: 25px;
@@ -180,6 +183,9 @@ body, html{
     font-family: "Montserrat";
     h1,h2{
         font-weight: 300;
+    }
+    p{
+        font-size: 2.5rem;
     }
 }
 h1{
@@ -309,7 +315,7 @@ p{
     padding: 33px 23px;
     color: #fff;
     font-family: "montserrat";
-    font-size: 1rem;
+    font-size: 1.5rem;
     :nth-child(2), :nth-child(n+4){
         padding-top: 20px;
     }
