--- a/src/style.scss
+++ b/src/style.scss
@@ -185,14 +185,17 @@ body, html{
         font-weight: 300;
     }
     p{
-        font-size: 2.5rem;
+        font-size: clamp(2.5rem, -12.5588rem + 18.8235vw, 4rem);
+    }
+    h2{
+        font-size: clamp(1.5rem, -9.0412rem + 13.1765vw, 2.2rem);
+    }
+    h1{
+        font-size: clamp(2.5rem, -12.5588rem + 18.8235vw, 3.7rem);
     }
 }
-h1{
-    font-size: 2.5rem;
-}
 p{
-    font-size: 2.5rem;
+    
     width: 92%;
 }
 .menu{
@@ -261,6 +264,9 @@ p{
     font-family: "Lora";
     padding: 125px 25px;
     font-size: 2rem;
+    header{
+        font-size: clamp(2rem, -28.1176rem + 37.6471vw, 3.7rem);
+    }
 }
 @media only screen and (max-width: 1100px) {
      .menu-items{
@@ -304,7 +310,7 @@ p{
     }
 }
 .description{
-    font-size: 1.25rem;
+    font-size: clamp(1.25rem, -10.0441rem + 14.1176vw, 2rem);
     color: rgb(215, 204, 204);
     padding-left: 3px;
 }
